<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/option_view"
          android:icon="@drawable/ic_menu_view"
          android:showAsAction="withText|always"
          android:title="Details" />
    
    <item android:id="@+id/option_assign_primary"
          android:icon="@drawable/ic_menu_share"
          android:showAsAction="withText|always"
          android:title="@string/menu_assign_main_weapon" />
    
    <item android:id="@+id/option_assign_secondary"
          android:icon="@drawable/ic_menu_share"
          android:showAsAction="withText|always"
          android:title="@string/menu_assign_secondary_weapon" />
    
    <item android:id="@+id/option_assign_hunting"
          android:icon="@drawable/ic_menu_star"
          android:showAsAction="withText|always"
          android:title="@string/menu_assign_hunting_weapon" />
    
    <item android:id="@+id/option_unassign"
          android:icon="@drawable/ic_menu_revert"
          android:showAsAction="withText|always"
          android:title="@string/menu_unassign_item" />

    <item android:id="@+id/option_select_version"
          android:icon="@drawable/ic_menu_more"
          android:showAsAction="withText|always"
          android:title="@string/menu_select_version" />			

    <item android:id="@+id/option_select_talent"
          android:icon="@drawable/ic_menu_more"
          android:showAsAction="withText|always"
          android:title="@string/menu_select_talent" />
    		
    <item android:id="@+id/option_delete"
          android:icon="@drawable/ic_menu_delete"
          android:showAsAction="withText|always"
          android:title="Löschen" />                    
    
</menu>