<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    
    android:fillViewport="true"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/popup_notes_spn_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </Spinner>

        <EditText
            android:id="@+id/popup_notes_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:inputType="textPersonName" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <EditText
            android:id="@+id/popup_notes_edit_so"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_social_state" >
        </EditText>

        <EditText
            android:id="@+id/popup_notes_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/label_note"
            android:inputType="text|textMultiLine"
            android:minHeight="50dip" >
        </EditText>
    </LinearLayout>

</ScrollView>